Improved functionality for adding a payment

--- a/CanopiusDemoApp/Views/Payment/Add.cshtml
+++ b/CanopiusDemoApp/Views/Payment/Add.cshtml
@@ -4,13 +4,9 @@
 
 <form asp-action="Add" method="post">
     <div>
-        <label asp-for="PolicyID">Policy</label>
-        <select asp-for="PolicyID" asp-items="@ViewBag.Policies"></select>
+        <select id="policySelect" asp-for="PolicyID" asp-items="@ViewBag.Policies"></select>
+        <select id="claimsSelect" asp-for="ClaimId"></select>
     </div>
-    <div>
-        <label asp-for="ClaimId">Claim ID</label>
-        <select asp-for="ClaimId" asp-items="@ViewBag.Claims"></select>
-    </div>>
     <div>
         <label asp-for="PaymentDate">Payment Date</label>
         <input asp-for="PaymentDate" type="date" />
@@ -27,3 +23,50 @@
 </form>
 
 <a asp-action="All">Back to List</a>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#policySelect').change(function () {
+            var policyId = $(this).val();
+            $.getJSON('/Payment/GetClaimsByPolicy', { policyId: policyId }, function (data) {
+                var items = '<option>Select a claim</option>';
+                $.each(data, function (i, claim) {
+                    items += "<option value='" + claim.value + "'>" + claim.text + "</option>";
+                });
+                $('#claimsSelect').html(items);
+            });
+        });
+    });
+</script>
+
+@* @model Data.Models.Payment
+
+<h1>Add Payment</h1>
+
+<form asp-action="Add" method="post">
+    <div>
+        <label asp-for="PolicyID">Policy</label>
+        <select asp-for="PolicyID" asp-items="@ViewBag.Policies" ></select>
+    </div>
+    <div>
+        <label asp-for="ClaimId">Claim Status</label>
+        <select asp-for="ClaimId" asp-items="@ViewBag.Claims"></select>
+    </div>
+    <div>
+        <label asp-for="PaymentDate">Payment Date</label>
+        <input asp-for="PaymentDate" type="date" />
+    </div>
+    <div>
+        <label asp-for="PaymentAmount">Payment Amount</label>
+        <input asp-for="PaymentAmount" />
+    </div>
+    <div>
+        <label asp-for="PaymentType">Payment Type</label>
+        <input asp-for="PaymentType" />
+    </div>
+    <button type="submit">Add</button>
+</form>
+
+<a asp-action="All">Back to List</a>
+ *@
