--- a/CanopiusDemoApp/Views/Home/Index.cshtml
+++ b/CanopiusDemoApp/Views/Home/Index.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Canopius Demo Application</h1>
+    <h1 class="display-4" color="whitesmoke">Welcome to Canopius Demo Application</h1>
 </div>
