--- a/CanopiusDemoApp/Views/Policy/All.cshtml
+++ b/CanopiusDemoApp/Views/Policy/All.cshtml
@@ -6,7 +6,7 @@
     <thead>
         <tr>
             <th>Policy ID</th>
-            <th>Customer ID</th>
+            <th>Customer Name</th>
             <th>Policy Type</th>
             <th>Start Date</th>
             <th>End Date</th>
@@ -19,7 +19,7 @@
         {
             <tr>
                 <td>@policy.Id</td>
-                <td>@policy.CustomerId</td>
+                <td>@policy.Customer.Name</td>
                 <td>@policy.PolicyType</td>
                 <td>@policy.StartDate.ToShortDateString()</td>
                 <td>@policy.EndDate.ToShortDateString()</td>
