--- a/CanopiusDemoApp/wwwroot/css/site.css
+++ b/CanopiusDemoApp/wwwroot/css/site.css
@@ -14,5 +14,17 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-image: url('../1678892131758.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
+
+h1{
+    color: whitesmoke;
+}
+
+table {
+    background-color: rgba(255, 255, 255, 0.92);
+}
+
